--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.4",
+    "@tailwindcss/typography": "^0.5.9",
     "nodemailer": "^6.9.4"
   }
 }
