--- a/package.json
+++ b/package.json
@@ -3,33 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^1.0.0",
-    "@next-auth/mongodb-adapter": "^1.1.3",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.16",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
-    "mongodb": "^5.7.0",
-    "next": "13.4.12",
-    "next-auth": "^4.22.3",
-    "postcss": "8.4.27",
+    "@auth/mongodb-adapter": "^2.0.3",
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.34",
+    "@types/react-dom": "18.2.14",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
+    "mongodb": "^6.2.0",
+    "next": "14.0.1",
+    "next-auth": "^4.24.4",
+    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss": "3.3.5",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.4",
-    "@tailwindcss/typography": "^0.5.9",
-    "nodemailer": "^6.9.4"
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10",
+    "nodemailer": "^6.9.7"
   }
 }
